@@ -1,3 +1,12 @@
+2010-10-09  Pratik Solanki  <psolanki@apple.com>
+
+        Reviewed by Xan Lopez.
+
+        https://bugs.webkit.org/show_bug.cgi?id=47445
+        Remove unused function WTFThreadData::initializeIdentifierTable()
+
+        * wtf/WTFThreadData.h:
+
 2010-10-08  Michael Saboff  <msaboff@apple.com>
 
         Reviewed by Darin Adler.
